refactor(quick-excel):优化图片读取和格式处理
- 更新图片读取方法，使用 Java 原生 API 替代 IOUtils
- 优化 DefaultFormat 中空值处理，返回空字符串代替 null
- 调整 ExcelConfig 中图片文件处理函数，返回空字符串代替 null
- 移除未使用的 Apache Commons Compress 依赖
- 更新 Apache POI 依赖至 5.4.0 版本